# uredir

./: .gitignore  .travis.yml  AUTHORS  LICENSE  Makefile.am  README.md  configure.ac  design.md  uredir.1  uredir.c  uredir.h  youdp.c
.github/: CONTRIBUTING.md
.github/workflows/: build.yml
debian/: .gitignore  changelog  control  copyright  rules  watch
